--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="button_update">Update</string>
     <string name="default_channel_id">ProjectD</string>
     <string name="please_update_engineer_timeline">*Please update engineer timeline</string>
+    <string name="label_lestari_taman_media">Lestari Taman Media</string>
 </resources>
