--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,7 @@
     <string name="please_update_engineer_timeline">*Please update engineer timeline</string>
     <string name="label_lestari_taman_media">Lestari Taman Media</string>
     <string name="hint_email">Email</string>
+    <string name="label_auto_start">aktifkan %1$s mulai otomatis</string>
+    <string name="label_backgroud_service">matikan pengoptimalan baterai</string>
+    <string name="label_white_list">Jika notifikasi tidak muncul Anda bisa mencoba untuk %1$s</string>
 </resources>
